fix: text blend mode set for contrasting

--- a/app/page.css
+++ b/app/page.css
@@ -79,6 +79,8 @@ body {
 
     color: white;
     font-size: 1.5rem;
+
+    mix-blend-mode: exclusion;
 }
 
 .ws-word {
@@ -129,6 +131,7 @@ body {
 
     border: 1px solid white;
     border-radius: 0.75rem;
+    mix-blend-mode: exclusion;
 }
 
 .reset-game-btn:hover {
